<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.baydar.examdownloader.OsysActivity" >

    <ScrollView
        android:id="@+id/svScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="441dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/osys_all"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="14dp"
                android:text="@string/osys_2013_ygs" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button1"
                android:layout_alignRight="@+id/button1"
                android:layout_below="@+id/button1"
                android:text="@string/osys_2013_lys" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignRight="@+id/button2"
                android:layout_below="@+id/button2"
                android:text="@string/osys_2012_ygs" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button3"
                android:layout_alignRight="@+id/button3"
                android:layout_below="@+id/button3"
                android:text="@string/osys_2012_lys" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignRight="@+id/button4"
                android:layout_below="@+id/button4"
                android:text="@string/osys_2011_ygs" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button5"
                android:layout_alignRight="@+id/button5"
                android:layout_below="@+id/button5"
                android:text="@string/osys_2011_lys" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button6"
                android:layout_alignRight="@+id/button6"
                android:layout_below="@+id/button6"
                android:text="@string/osys_2010_ygs" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button7"
                android:layout_alignRight="@+id/button7"
                android:layout_below="@+id/button7"
                android:text="@string/osys_2010_lys" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button8"
                android:layout_alignRight="@+id/button8"
                android:layout_below="@+id/button8"
                android:text="@string/osys_2009_oss" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button9"
                android:layout_alignRight="@+id/button9"
                android:layout_below="@+id/button9"
                android:text="@string/osys_2008_oss" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>