<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/svScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="441dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_weight="0.18"
                android:gravity="center"
                android:text="BlaBlaosys"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="14dp"
                android:onClick="startDownload"
                android:tag="1"
                android:text="@string/turkce1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button1"
                android:layout_alignRight="@+id/button1"
                android:layout_below="@+id/button1"
                android:onClick="startDownload"
                android:tag="2"
                android:text="@string/sos1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignRight="@+id/button2"
                android:layout_below="@+id/button2"
                android:onClick="startDownload"
                android:tag="3"
                android:text="@string/matematik1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button3"
                android:layout_alignRight="@+id/button3"
                android:layout_below="@+id/button3"
                android:onClick="startDownload"
                android:tag="4"
                android:text="@string/fen1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignRight="@+id/button4"
                android:layout_below="@+id/button4"
                android:onClick="startDownload"
                android:tag="5"
                android:text="@string/turkce2" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button5"
                android:layout_alignRight="@+id/button5"
                android:layout_below="@+id/button5"
                android:onClick="startDownload"
                android:tag="6"
                android:text="@string/sos2" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button6"
                android:layout_alignRight="@+id/button6"
                android:layout_below="@+id/button6"
                android:onClick="startDownload"
                android:tag="7"
                android:text="@string/matematik2" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button7"
                android:layout_alignRight="@+id/button7"
                android:layout_below="@+id/button7"
                android:onClick="startDownload"
                android:tag="8"
                android:text="@string/fen2" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button8"
                android:layout_alignRight="@+id/button8"
                android:layout_below="@+id/button8"
                android:onClick="startDownload"
                android:tag="9"
                android:text="@string/cevap" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>